--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <link rel="stylesheet" href="./src/index.css">
   </head>
   <body>
     <div id="root"></div>
+    <section class = "searchBox">
+      <div class="searchBar"><form>
+        <label for="phoneNumber">Phone Number:</label>
+        <input  inputmode="numeric" id="phoneNumber" name="phoneNumber">
+      </form></div>
+      <div class="searchBar">Full Name:</div>
+      <div class="searchBar">Status:</div>
+    </section>
+    <section class="pfp"><img src="#"></section>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
