--- a/index.html
+++ b/index.html
@@ -205,10 +205,13 @@
           <div class="col">
           </div>
           <div class="row">
-            <img src="./src/assets/img/wht.png">
+            <div  class="justify-content-center">
+              <img src="src/assets/img/useme.png">
           </div>
-          <div class="col">
-          </div>
+        </div>
+        <div style="height: 40px;" class="row">
+          
+        </div>
         </div>
       </div>
     </div>
