--- a/index.html
+++ b/index.html
@@ -97,17 +97,17 @@
               <tr>
                 <th scope="row">1</th>
                 <td>Mark</td>
-                <td>260</td>
+                <td>18</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
                 <td>Jacob</td>
-                <td>180</td>
+                <td>10</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
                 <td>Olly</td>
-                <td>120</td>
+                <td>8</td>
               </tr>
             </tbody>
           </table>
@@ -189,7 +189,7 @@
         <div class="container text-center">
           <div class="row align-items-start">
             <div class="col">
-              contact name: <input type="name">
+              contact : <input type="name">
             </div>
             <div class="col">
               time: <input type="datetime-local">
@@ -246,7 +246,7 @@
         labels: ['00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00'],
         datasets: [{
           label: 'hourly activity',
-          data: [0, 0, 0, 0, 0, 0, 0, 0, 10, 30, 40, 0, 10, 10, 0, 60, 70, 40, 40, 10, 0, 0, 0, 0],
+          data: [10, 20, 20, 10, 0, 0, 0, 0, 0, 0, 0, 10, 20, 20, 30, 10, 10, 10, 0, 0, 0, 0, 0, 0],
           fill: false,
           borderColor: 'rgb(75, 192, 192)',
           tension: 0.1,
