--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </tr>
               <tr>
                 <th scope="row">3</th>
-                <td>Jhon</td>
+                <td>Jon dealer</td>
                 <td>10%</td>
               </tr>
             </tbody>
